rabbitmq_verification.txt
error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/helper_invariants/proof.rs:555:64
    |
555 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
    --> src/controllers/rabbitmq_controller/proof/helper_invariants/proof.rs:1173:64
     |
1173 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
     |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
   4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
     |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
  --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:40:64
   |
40 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
   |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
  --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:70:64
   |
70 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
   |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
  --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:86:64
   |
86 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
   |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:107:64
    |
107 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:120:64
    |
120 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/liveness/proof.rs:203:64
    |
203 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/liveness/resource_match.rs:904:64
    |
904 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
  --> src/controllers/rabbitmq_controller/proof/liveness/spec.rs:74:64
   |
74 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
   |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/liveness/spec.rs:395:64
    |
395 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/safety/proof.rs:103:64
    |
103 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/safety/proof.rs:206:64
    |
206 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error[E0425]: cannot find function `rabbitmq_controller_model` in this scope
   --> src/controllers/rabbitmq_controller/proof/safety/proof.rs:282:64
    |
282 |         cluster.controller_models.contains_pair(controller_id, rabbitmq_controller_model()),
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  4 + use crate::rabbitmq_controller::model::install::rabbitmq_controller_model;
    |

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0425`.
(use --output-json for machine-readable output)
verus-build-info
Verus
  Version: 0.2025.11.30.840fa61
  Profile: release
  Platform: linux_x86_64
  Toolchain: 1.91.0-x86_64-unknown-linux-gnu

total-time:            6459 ms
    rust-time:                6213 ms
        init-and-types:           6213 ms
        trait-conflicts:             0 ms
        compile-time:                0 ms
    verification-time:           0 ms
        vir-time:                    0 ms
            hir-time:                    0 ms
            import-time:                 0 ms
            rust-to-vir:                 0 ms
        verify-crate-time:           0 ms
    unaccounted-time:          245 ms

verify-crate-time-breakdown
    total verify-time:              0 ms   (1 threads)
        total air-time:                 0 ms   (1 threads)
        total smt-time:                 0 ms   (1 threads)
            total smt-init:                 0 ms   (1 threads)
            total smt-run:                  0 ms,        0 rlimit (1 threads)
